fix: collapsing rows in iPhone

--- a/src/app/checklist/filters/checklist-filters.component.scss
+++ b/src/app/checklist/filters/checklist-filters.component.scss
@@ -43,5 +43,5 @@
   margin-bottom: 2px;
   user-select: none;
   &.filter-inactive { opacity: .4; }
-  &:hover { opacity: .5 }
+  &:hover { opacity: .5; }
 }
