--- a/src/app/checklist/list/checklist-list.component.scss
+++ b/src/app/checklist/list/checklist-list.component.scss
@@ -98,6 +98,7 @@ $row-border-radius: 2px;
     height: $row-height;
     margin-bottom: 1px;
     box-shadow: 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
     cursor: pointer;
     transition: height ease-in-out .3s;
 
@@ -107,9 +108,9 @@ $row-border-radius: 2px;
   
     .bjj-list-row-header {
       display: flex;
+      flex: 0 0 40px;
       flex-flow: row;
       width: 100%;
-      max-height: $row-height;
       background-color: rgba(255,255,255,.06);
 
       &:hover {
@@ -120,9 +121,11 @@ $row-border-radius: 2px;
     }
     
     .bjj-list-row-curtain {
+      display: flex;
+      flex: 1 1 100%;
       background-color: rgba(0, 0, 0, .3);
-      height: 100%;
       margin: 0 0 0 40px;
+      overflow: hidden;
     }
   }
 }
@@ -131,7 +134,6 @@ $row-border-radius: 2px;
 // List cells
 .bjj-list-cell {
   display: flex;
-  height: 100%;
   padding: 10px;
 }
 
@@ -139,8 +141,6 @@ $row-border-radius: 2px;
   max-width: $cell-width-status;
   border-radius: $row-border-radius 0 0 $row-border-radius;
   transition: opacity ease-in-out 100ms;
-  max-height: $row-height;
-  min-height: $row-height;
   &:hover { opacity: .94; }
   .fa {
     color: #fff;
